Edit Project Config
Change-Id: Ic1f1879b8fa83e7f2d553efecb7811c3116ba498

--- a/project.config
+++ b/project.config
@@ -1,3 +1,5 @@
+[project]
+	description = Plugin to provide an out-of-the-box redirect for a fresh Gerrit install
 [access]
 	inheritFrom = Public-Plugins
 [access "refs/*"]
